Fixing more design errors. Student apply: spacing, alignment, studnet apply header placement

--- a/frontend/src/styles/apply/Faq.module.css
+++ b/frontend/src/styles/apply/Faq.module.css
@@ -10,6 +10,7 @@
   font-family: Karla;
   font-size: 34px;
   line-height: 39.75px;
+  text-align: center;
   color: #0069ca;
   margin: 0px;
   width: 237px;
